--- a/client/styles/global.scss
+++ b/client/styles/global.scss
@@ -1,17 +1,16 @@
 @import './variables.scss';
 
-body{ 
+body { 
   margin: 0;
   padding: 0;
-  font-family: fantasy;
+  background-color: $white;
 }
 
-h1{
+h1 {
   color: $brown;
 }
 
-a{
+a {
   text-decoration: none;
   color: $blue;
-  padding-left: 50px;
 }
