--- a/client/styles/global.scss
+++ b/client/styles/global.scss
@@ -1,16 +1,44 @@
 @import './variables.scss';
 
-body { 
+html {
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+  overflow-y: overlay;
+}
+
+body {
+  height: 100vh;
+  width: 100vw;
   margin: 0;
-  padding: 0;
-  background-color: $white;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+  overflow-y: overlay;
 }
 
 h1 {
   color: $brown;
+  margin: 0;
 }
 
 a {
   text-decoration: none;
   color: $blue;
+}
+
+::-webkit-scrollbar {
+  background-color: transparent;
+  width: 10px;
+  margin: 20px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba($brown, .15);
+  border-radius: 20px;
+  width: 10px;
 }
