--- a/client/styles/variables.scss
+++ b/client/styles/variables.scss
@@ -4,5 +4,6 @@ $mauve: #896978;
 $green: #7B886F;
 $white: #F6FBFF;
 
-$title-font: 'Playfair Display', serif;
+$title-font: 'Eczar', serif;
+$title-weight: 400;
 $body-font: 'Mulish', sans-serif;
