--- a/client/styles/profile.scss
+++ b/client/styles/profile.scss
@@ -1,30 +1,74 @@
 @import './variables.scss';
 
-// button {
-//   font-size: 15px;
-//   left: 10px;
-//   border-radius: 5px;
-//   background-color: transparent;
-//   border: 2px solid $blue;
-//   padding: 5px 15px;
-//   background-color: $white;
-//   color: $blue;
-// }
-
 #profile-page {
   height: 93vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  margin-top: 40px;
 }
+
+.profile-section {
+  max-width: 60vw;
+  display: flex;
+  flex-direction: column;
+}
+
+.profile-selections {
+  display: flex;
+  max-width: 35vw;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-title {
+  text-align: center;
+  font-family: $title-font;
+  font-size: 1.3rem;
+  color: $brown;
+  margin: 0px;
+  font-weight: 700;
+}
+
+.unbold-title {
+  text-align: center;
+  font-family: $title-font;
+  color: $brown;
+  margin-right: 0px;
+  margin-bottom: 5px;
+  font-weight: 400;
+}
+
+.pass-title {
+  text-align: center;
+  font-family: $title-font;
+  color: $brown;
+  margin-bottom: 0px;
+  margin-right: 10px;
+}
+
 .false {
   display: none;
 }
-.profile-selections{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+
+.profile-btn {
+  margin: 0;
+  font-size: 15px;
+  font-weight: 300;
+  font-family: $body-font;
+  border-radius: 8px;
+  border: none;
+  box-shadow: rgba($blue, 0.12) 0px 1px 3px, rgba($blue, 0.24) 0px 1px 2px;
+  padding: 5px 15px;
+  background-color: white;
+  color: $blue;
+}
+
+#edit-button {
+  background-color: $blue;
+  color: $white;
 }
 
 .pb {
@@ -55,13 +99,42 @@
   display: none;
 }
 
-.edit-button {
-  border-color: $brown;
-  color: $brown;
+#change-display-name {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 30px;
+  height: 15vh;
 }
 
 #pass-change-box {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 60vw;
+  height: 25vh;
+  margin-top: 30px;
+}
+
+.input-box {
+  margin: 0px;
+  box-shadow: rgba($brown, 0.2) 0px 2px 8px 0px;
+  border: none;
+  font-family: $body-font;
+  border-radius: 10px;
+  height: 2rem;
+  padding: 0 10px;
+}
+
+.input-box:focus {
+  outline: none;
+  box-shadow: rgba($green, 0.8) 0px 2px 8px 0px;
+}
+
+
+label {
+  margin-right: 10px;
 }
 
