--- a/client/styles/feed.scss
+++ b/client/styles/feed.scss
@@ -1,52 +1,7 @@
 @import './variables.scss';
 
-#dropdown {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 10px;
-  min-width: 300px;
-  width: 400px;
-  max-width: 400px;
-  margin-left: 10px;
-
-  #dropdown-but {
-    font-size: 20px;
-    left: 10px;
-    background-color: transparent;
-    padding: 5px 15px;
-    &:hover {
-      cursor: pointer;
-    }
-  }
-  .menu {
-    position: absolute;
-    list-style-type: none;
-    margin: 5px 0;
-    padding: 0;
-    border: 1px solid grey;
-    width: 150px;
-  }
-
-  .menu > li {
-    margin: 0;
-  }
-
-  .menu > li > button {
-    width: 100%;
-    height: 100%;
-    text-align: left;
-    background: none;
-    color: inherit;
-    border: none;
-    padding: 5px;
-    margin: 0;
-    font: inherit;
-    cursor: pointer;
-  }
-}
-
 #card-container {
-  margin: 100px;
   display: grid;
+  place-items: center;
   grid-template-columns: repeat(auto-fill, minmax(400px, 600px));
 }
