--- a/client/styles/profile.scss
+++ b/client/styles/profile.scss
@@ -69,6 +69,14 @@
 #edit-button {
   background-color: $blue;
   color: $white;
+  margin: 5px;
+}
+
+#save-button {
+  background-color: $blue;
+  color: $white;
+  margin: 5px;
+  margin-top: 15px;
 }
 
 .pb {
@@ -79,17 +87,20 @@
 
 .remove-link {
   position: absolute;
-  padding-left: 0;
   top: -5px;
   right: -5px;
-  background-color: red;
+  background-color: $mauve;
+  font-family: $body-font;
   color: $white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 50%;
   width: 15px;
   line-height: 15px;
   height: auto;
   text-align: center;
-  z-index: 1;
+  // z-index: 1;
   &:hover{
     cursor: pointer;
   }
@@ -138,3 +149,50 @@ label {
   margin-right: 10px;
 }
 
+#dropdown {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+
+  .dropdown-button {
+    background-color: rgba($green, 0.9);
+    color: $white;
+    margin: 0;
+    margin-bottom: 10px;
+    font-size: 15px;
+    font-weight: 300;
+    font-family: $body-font;
+    border-radius: 8px;
+    border: none;
+    box-shadow: rgba($blue, 0.12) 0px 1px 3px, rgba($blue, 0.24) 0px 1px 2px;
+    padding: 5px 15px;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+  .menu {
+    position: absolute;
+    list-style-type: none;
+    margin: 5px 0;
+    padding: 0;
+    border: none;
+    box-shadow: rgba($blue, 0.12) 0px 1px 3px, rgba($blue, 0.24) 0px 1px 2px;
+    font-family: $body-font;
+    color: $brown;
+    background-color: white;
+    width: 150px;
+  }
+
+  .menu > li > button {
+    width: 100%;
+    height: 100%;
+    text-align: left;
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 5px;
+    font: inherit;
+    cursor: pointer;
+  }
+}
