--- a/client/styles/chatbox.scss
+++ b/client/styles/chatbox.scss
@@ -50,6 +50,7 @@
       height: 600px;
       background-color: rgb(191, 212, 201);
       width: 400px;
+      overflow-y: scroll;
     }
     .input-div {
       height: 50px;
